Change dialog to use boardStatuses
* Use the board statuses instead of all application statues so we only see statuses for the current board

--- a/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
@@ -104,10 +104,10 @@
   <div class="select-container">
     <ng-select
       class="card-type"
-      [items]="applicationStatuses"
+      [items]="boardStatuses"
       placeholder="Workflow Stage"
       bindLabel="label"
-      bindValue="code"
+      bindValue="statusCode"
       [clearable]="false"
       [(ngModel)]="selectedApplicationStatus"
       (change)="onStatusSelected($event)"
