--- a/alcs-frontend/src/app/features/board/recon-card-detail-dialog/recon-card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/recon-card-detail-dialog/recon-card-detail-dialog.component.html
@@ -69,7 +69,7 @@
   <div class="select-container">
     <ng-select
       class="card-type"
-      [items]="applicationStatuses"
+      [items]="boardStatuses"
       placeholder="Workflow Stage"
       bindLabel="label"
       bindValue="code"
