Add assignee tooltip to cards
* Disable tooltip when no name is set

--- a/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
@@ -31,7 +31,7 @@
         </button>
         <button
           [mat-dialog-close]="isApplicationDirty"
-          [routerLink]="['application', application.fileNumber]"
+          [routerLink]="['application', application.fileNumber, 'info-request']"
           mat-menu-item
         >
           Add Info Request
