--- a/alcs-frontend/src/app/features/application/review/decision-meeting/decision-meeting.component.html
+++ b/alcs-frontend/src/app/features/application/review/decision-meeting/decision-meeting.component.html
@@ -2,7 +2,7 @@
 
 <div class="flex-container">
   <div class="col-40">
-    <h4>Decision Meeting Dates</h4>
+    <h4>Review Meeting Dates</h4>
   </div>
   <div class="pull-right">
     <button mat-flat-button color="primary" class="pull-right" (click)="onCreate()">+ New meeting</button>
