--- a/alcs-frontend/src/app/features/application/review/review.component.scss
+++ b/alcs-frontend/src/app/features/application/review/review.component.scss
@@ -1,3 +1,12 @@
 section {
   margin-bottom: 64px;
 }
+
+.notification-date {
+  margin-top: 16px;
+  margin-bottom: 24px;
+}
+
+.subheading1 {
+  margin-bottom: 8px !important;
+}
