--- a/alcs-frontend/src/app/features/board/recon-create-card-dialog/recon-create-card-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/recon-create-card-dialog/recon-create-card-dialog.component.html
@@ -72,7 +72,7 @@
           bindLabel="label"
           bindValue="code"
           [clearable]="false"
-          formControlName="type"
+          formControlName="applicationType"
         >
           <ng-template ng-option-tmp let-item="item">
             <div class="application-type">
@@ -126,15 +126,35 @@
         >
         </ng-select>
       </div>
+
       <div>
-        <mat-form-field class="date-picker" appearance="outline">
-          <mat-label>Reconsideration Request Submitted to ALC</mat-label>
-          <input matInput [matDatepicker]="pdd" formControlName="receivedDate" required />
-          <mat-datepicker-toggle matSuffix [for]="pdd"></mat-datepicker-toggle>
-          <mat-datepicker #pdd type="date"> </mat-datepicker>
-        </mat-form-field>
+        <ng-select
+          appearance="outline"
+          class="card-local-government"
+          [items]="localGovernments"
+          appendTo="body"
+          placeholder="Local Government *"
+          bindLabel="name"
+          bindValue="uuid"
+          [clearable]="false"
+          formControlName="localGovernment"
+          (change)="onSelectGovernment($event)"
+        >
+          <ng-template ng-option-tmp let-item="item" let-search="searchTerm">
+            <div [ngOptionHighlight]="search">{{ item.name }}</div>
+          </ng-template>
+        </ng-select>
       </div>
     </div>
+    <div>
+      <mat-form-field class="date-picker" appearance="outline">
+        <mat-label>Reconsideration Request Submitted to ALC</mat-label>
+        <input matInput [matDatepicker]="pdd" formControlName="submittedDate" required />
+        <mat-datepicker-toggle matSuffix [for]="pdd"></mat-datepicker-toggle>
+        <mat-datepicker #pdd type="date"> </mat-datepicker>
+      </mat-form-field>
+    </div>
+
     <div class="warning-section">
       <div class="form-warning" *ngIf="isDecisionDateEmpty">File does not have a decision</div>
       <div class="form-warning" *ngIf="hasPendingRecon">File already has pending reconsideration</div>
