--- a/alcs-frontend/src/app/features/board/recon-card-detail-dialog/recon-card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/recon-card-detail-dialog/recon-card-detail-dialog.component.html
@@ -11,11 +11,11 @@
         <span
           class="center application-type"
           [ngStyle]="{
-            backgroundColor: recon.type.backgroundColor,
-            color: recon.type.textColor
+            backgroundColor: recon.application.type.backgroundColor,
+            color: recon.application.type.textColor
           }"
         >
-          {{ recon.type.label }}
+          {{ recon.application.type.label }}
         </span>
       </h3>
     </div>
@@ -74,7 +74,7 @@
       [items]="boardStatuses"
       placeholder="Workflow Stage"
       bindLabel="label"
-      bindValue="code"
+      bindValue="statusCode"
       [clearable]="false"
       [(ngModel)]="selectedApplicationStatus"
       (change)="onStatusSelected($event)"
