local government on recon card

--- a/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
@@ -47,7 +47,7 @@
     </div>
   </div>
   <div>
-    <span class="region">{{ application.localGovernment }} - {{ application.regionDetails.label }} Region</span>
+    <span class="region">{{ application.localGovernment.name }} - {{ application.regionDetails.label }} Region</span>
   </div>
   <div class="header-row">
     <div class="left">
