UX Updates Part 1
* Unify toast messages
* Auto open inline datepicker
* Other small changes

--- a/alcs-frontend/src/app/features/application/info-requests/info-requests.component.html
+++ b/alcs-frontend/src/app/features/application/info-requests/info-requests.component.html
@@ -36,10 +36,10 @@
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef>User Action</th>
     <td mat-cell *matCellDef="let element">
-      <button mat-icon-button class="action-btn" (click)="onEdit(element.uuid)">
+      <button matTooltip="Edit" mat-icon-button class="action-btn" (click)="onEdit(element.uuid)">
         <mat-icon>edit</mat-icon>
       </button>
-      <button mat-icon-button class="action-btn delete" (click)="onDelete(element.uuid)">
+      <button matTooltip="Delete" mat-icon-button class="action-btn delete" (click)="onDelete(element.uuid)">
         <mat-icon>delete</mat-icon>
       </button>
     </td>
