--- a/alcs-frontend/src/app/features/application/info-requests/info-rquest-dialog/info-request-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/info-requests/info-rquest-dialog/info-request-dialog.component.html
@@ -56,6 +56,7 @@
           <mat-radio-button value="custom">
             Other:
             <input
+              class="other-text"
               #customReasonText
               matInput
               type="text"
