--- a/alcs-frontend/src/styles/buttons.scss
+++ b/alcs-frontend/src/styles/buttons.scss
@@ -110,3 +110,7 @@
   background-color: $grey !important;
   color: #fff !important;
 }
+
+.mat-icon-button:hover {
+  background-color: $grey-light;
+}
