--- a/alcs-frontend/src/app/shared/meeting-overview/meeting-overview.component.scss
+++ b/alcs-frontend/src/app/shared/meeting-overview/meeting-overview.component.scss
@@ -2,9 +2,28 @@
 @import '../../../styles/typography';
 
 .search-bar {
-  margin-bottom: 16px;
   display: flex;
   align-items: center;
+  width: 100%;
+  margin-bottom: 24px;
+}
+
+.search-form-field {
+  width: 100%;
+  margin-right: 32px;
+}
+
+:host::ng-deep {
+  .search-bar {
+    .mat-form-field-wrapper {
+      padding: 0;
+      margin: 0;
+    }
+
+    .mat-form-field {
+      width: 100%;
+    }
+  }
 }
 
 .search-button {
@@ -12,12 +31,8 @@
 }
 
 .search-input {
-  margin-right: 12px;
-  border: 1px solid $grey;
   flex-grow: 1;
-  height: 26px;
-  border-radius: 6px;
-  padding: 12px 16px;
+  margin-right: 16px;
   font-size: 16px;
 }
 
