Add Decision Events to Timeline
* Load applications relation to fix bug when editing
* Fix toast messages
* Change icon highlight to use darker gray with opacity so it can be safely applied to different background

--- a/alcs-frontend/src/app/features/application/decision/decision-dialog/decision-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-dialog/decision-dialog.component.html
@@ -46,7 +46,7 @@
           <mat-button-toggle value="false">Not Needed</mat-button-toggle>
         </mat-button-toggle-group>
       </div>
-      <mat-form-field appearance="outline" class="date-picker chair-review-date">
+      <mat-form-field *ngIf="form.get('chairReviewRequired')!.value === 'true'" appearance="outline" class="date-picker chair-review-date">
         <mat-label>Chair Review Date</mat-label>
         <input
           matInput
