--- a/alcs-frontend/src/app/features/application/info-requests/info-rquest-dialog/info-request-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/info-requests/info-rquest-dialog/info-request-dialog.component.html
@@ -10,6 +10,7 @@
           <mat-label>Date requested</mat-label>
           <input
             matInput
+            (click)="startDate.open()"
             [matDatepicker]="startDate"
             [(ngModel)]="model.startDate"
             name="startDate"
@@ -28,6 +29,7 @@
           <mat-label>Date fulfilled</mat-label>
           <input
             matInput
+            (click)="endDate.open()"
             id="endDate"
             [matDatepicker]="endDate"
             [(ngModel)]="model.endDate"
