--- a/alcs-frontend/src/app/features/board/create-card-detail-dialog/create-card-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/create-card-detail-dialog/create-card-dialog.component.html
@@ -89,9 +89,15 @@
       <div>
         <mat-form-field class="date-picker" appearance="outline">
           <mat-label>Date Submitted to ALC</mat-label>
-          <input matInput [matDatepicker]="pdd" formControlName="receivedDate" required />
-          <mat-datepicker-toggle matSuffix [for]="pdd"></mat-datepicker-toggle>
-          <mat-datepicker #pdd type="date"> </mat-datepicker>
+          <input
+            matInput
+            (click)="datePicker.open()"
+            [matDatepicker]="datePicker"
+            formControlName="receivedDate"
+            required
+          />
+          <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
+          <mat-datepicker #datePicker type="date"> </mat-datepicker>
         </mat-form-field>
       </div>
       <div>
@@ -108,7 +114,7 @@
           (change)="onSelectGovernment($event)"
         >
           <ng-template ng-option-tmp let-item="item" let-search="searchTerm">
-              <div [ngOptionHighlight]="search">{{ item.name }}</div>
+            <div [ngOptionHighlight]="search">{{ item.name }}</div>
           </ng-template>
         </ng-select>
       </div>
