--- a/alcs-frontend/src/app/features/application/decision/decision-dialog/decision-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-dialog/decision-dialog.component.html
@@ -8,6 +8,7 @@
         <mat-label>Decision Date</mat-label>
         <input
           matInput
+          (click)="datePicker.open()"
           [matDatepicker]="datePicker"
           formControlName="date"
           name="date"
@@ -31,7 +32,13 @@
       ></ng-select>
       <mat-form-field appearance="outline" class="date-picker">
         <mat-label>Audit Date</mat-label>
-        <input matInput [matDatepicker]="auditDatePicker" formControlName="auditDate" name="auditDate" />
+        <input
+          matInput
+          (click)="auditDatePicker.open()"
+          [matDatepicker]="auditDatePicker"
+          formControlName="auditDate"
+          name="auditDate"
+        />
         <mat-datepicker-toggle matSuffix [for]="auditDatePicker"></mat-datepicker-toggle>
         <mat-datepicker #auditDatePicker type="date"> </mat-datepicker>
       </mat-form-field>
@@ -50,6 +57,7 @@
         <mat-label>Chair Review Date</mat-label>
         <input
           matInput
+          (click)="chairReviewDatePicker.open()"
           [matDatepicker]="chairReviewDatePicker"
           formControlName="chairReviewDate"
           name="chairReviewDate"
