fix api unit tests

--- a/alcs-frontend/src/app/features/board/recon-card-detail-dialog/recon-card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/recon-card-detail-dialog/recon-card-detail-dialog.component.html
@@ -17,6 +17,15 @@
         >
           {{ recon.application.type.label }}
         </span>
+        <span
+          class="center application-type"
+          [ngStyle]="{
+            backgroundColor: reconType.backgroundColor,
+            color: reconType.textColor
+          }"
+        >
+          {{ reconType.label }}
+        </span>
       </h3>
     </div>
     <div>
