styling and create form updates

--- a/alcs-frontend/src/app/features/board/recon-create-card-dialog/recon-create-card-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/recon-create-card-dialog/recon-create-card-dialog.component.html
@@ -155,8 +155,7 @@
     </div>
 
     <div class="warning-section">
-      <div class="form-warning" *ngIf="isDecisionDateEmpty">File does not have a decision</div>
-      <div class="form-warning" *ngIf="hasPendingRecon">File already has pending reconsideration</div>
+      <div class="warning" *ngIf="isDecisionDateEmpty"><mat-icon>warning</mat-icon>File does not have a decision</div>
     </div>
   </mat-dialog-content>
 
