--- a/alcs-frontend/src/app/features/board/recon-card-detail-dialog/recon-card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/recon-card-detail-dialog/recon-card-detail-dialog.component.html
@@ -40,9 +40,7 @@
     </div>
   </div>
   <div>
-    <span class="region"
-      >{{ recon.application.localGovernment.name }} - {{ recon.application.region.label }} Region</span
-    >
+    <span class="region">{{ recon.application.localGovernment }} - {{ recon.application.region.label }} Region</span>
   </div>
   <div class="header-row">
     <div class="left"></div>
