Handle board statuses being HTML
* Write them as html instead of plain text

--- a/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
@@ -121,6 +121,9 @@
       <ng-template ng-option-tmp let-item="item">
         <span [innerHTML]="item.label"> </span>
       </ng-template>
+      <ng-template ng-label-tmp let-item="item">
+        <span [innerHTML]="item.label"> </span>
+      </ng-template>
     </ng-select>
     <ng-select
       class="card-assignee"
