--- a/alcs-frontend/src/app/features/home/assigned/assigned.component.html
+++ b/alcs-frontend/src/app/features/home/assigned/assigned.component.html
@@ -20,7 +20,7 @@
         </td>
         <td>{{ application.fileNumber }} ({{ application.applicant }})</td>
         <td>{{ application.activeDays }}</td>
-        <td>{{ application.status }}</td>
+        <td [innerHTML]="application.status"></td>
       </tr>
     </tbody>
   </table>
