--- a/alcs-frontend/src/app/features/board/recon-create-card-dialog/recon-create-card-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/recon-create-card-dialog/recon-create-card-dialog.component.html
@@ -152,7 +152,7 @@
           matInput
           (click)="datePicker.open()"
           [matDatepicker]="datePicker"
-          formControlName="receivedDate"
+          formControlName="submittedDate"
           required
         />
         <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
