--- a/alcs-frontend/src/app/features/application/application.component.html
+++ b/alcs-frontend/src/app/features/application/application.component.html
@@ -22,7 +22,7 @@
       <div class="sub-heading">
         <div>
           <div class="subheading2">Local Government:</div>
-          <div class="body1-text">{{ application.localGovernment }}</div>
+          <div class="body1-text">{{ application.localGovernment.name }}</div>
         </div>
         <div>
           <div class="subheading2">Business Days:</div>
