--- a/alcs-frontend/src/app/features/board/recon-create-card-dialog/recon-create-card-dialog.component.scss
+++ b/alcs-frontend/src/app/features/board/recon-create-card-dialog/recon-create-card-dialog.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../styles/colors';
+
 .content {
   padding: 0 16px;
 }
@@ -45,4 +47,18 @@ mat-dialog-actions {
 .btn-wrapper-right {
   margin-left: auto;
   margin-right: 0;
+}
+
+.warning {
+  padding: 16px;
+  font-size: 16px;
+  background-color: rgba($secondary-color, 0.2);
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+
+  mat-icon {
+    color: $secondary-color-dark;
+    margin-right: 16px;
+  }
 }
