--- a/alcs-frontend/src/app/features/board/recon-create-card-dialog/recon-create-card-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/recon-create-card-dialog/recon-create-card-dialog.component.html
@@ -72,7 +72,7 @@
           bindLabel="label"
           bindValue="code"
           [clearable]="false"
-          formControlName="type"
+          formControlName="applicationType"
         >
           <ng-template ng-option-tmp let-item="item">
             <div class="application-type">
@@ -115,6 +115,24 @@
       <div>
         <ng-select
           appearance="outline"
+          class="card-local-government"
+          [items]="localGovernments"
+          appendTo="body"
+          placeholder="Local Government *"
+          bindLabel="name"
+          bindValue="uuid"
+          [clearable]="false"
+          formControlName="localGovernment"
+          (change)="onSelectGovernment($event)"
+        >
+          <ng-template ng-option-tmp let-item="item" let-search="searchTerm">
+            <div [ngOptionHighlight]="search">{{ item.name }}</div>
+          </ng-template>
+        </ng-select>
+      </div>
+      <div>
+        <ng-select
+          appearance="outline"
           class="card-recon-type"
           [items]="reconTypes"
           appendTo="body"
@@ -126,24 +144,23 @@
         >
         </ng-select>
       </div>
-      <div>
-        <mat-form-field class="date-picker" appearance="outline">
-          <mat-label>Reconsideration Request Submitted to ALC</mat-label>
-          <input
-            matInput
-            (click)="datePicker.open()"
-            [matDatepicker]="datePicker"
-            formControlName="receivedDate"
-            required
-          />
-          <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
-          <mat-datepicker #datePicker type="date"> </mat-datepicker>
-        </mat-form-field>
-      </div>
+    </div>
+    <div>
+      <mat-form-field class="date-picker" appearance="outline">
+        <mat-label>Reconsideration Request Submitted to ALC</mat-label>
+        <input
+          matInput
+          (click)="datePicker.open()"
+          [matDatepicker]="datePicker"
+          formControlName="submittedDate"
+          required
+        />
+        <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
+        <mat-datepicker #datePicker type="date"> </mat-datepicker>
+      </mat-form-field>
     </div>
     <div class="warning-section">
-      <div class="form-warning" *ngIf="isDecisionDateEmpty">File does not have a decision</div>
-      <div class="form-warning" *ngIf="hasPendingRecon">File already has pending reconsideration</div>
+      <div class="warning" *ngIf="isDecisionDateEmpty"><mat-icon>warning</mat-icon>File does not have a decision</div>
     </div>
   </mat-dialog-content>
 
