--- a/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.html
+++ b/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.html
@@ -20,7 +20,7 @@
           <span class="high-priority" *ngIf="subtask.application.card.highPriority">!</span>
         </td>
         <td>{{ subtask.application.fileNumber }} ({{ subtask.application.applicant }})</td>
-        <td>{{ subtask.application.activeDays }}</td>
+        <td>{{ subtask.reconsideration ? '-' : subtask.application.activeDays }}</td>
         <td [innerHTML]="subtask.application.status"></td>
         <td class="assignee-column">
           <ng-select
@@ -44,7 +44,17 @@
         </td>
         <td class="action-column">
           <button
+            *ngIf="!subtask.reconsideration"
             (click)="openCard(subtask.application.fileNumber, subtask.application.board, 'APP')"
+            mat-flat-button
+            color="accent"
+          >
+            View
+          </button>
+
+          <button
+            *ngIf="!!subtask.reconsideration"
+            (click)="openCard(subtask.reconsideration.card.uuid, subtask.reconsideration.card.board.code, 'RECON')"
             mat-flat-button
             color="accent"
           >
